# Parallel-and-Distributed-Programming

./: README.md
Assignment 02/ChatsAPP/: Client.cpp  Makefile  ReadMe.txt  Server.cpp
Assignment 02/MatMul/: main.cpp
Assignment 03/ArraySum/: Client.cpp  Client.h  Makefile  Server.cpp  Server.h  array_sum.cpp
Assignment 03/ArraySum/Results Obtained/: plotForSizes.py
Assignment 03/Laplace/: Client.cpp  Client.h  Makefile  Server.cpp  Server.h  laplace.cpp  plot.py
Assignment 03/Laplace/Results Obtained/: plot.py
Assignment 03/MatMul/: Client.cpp  Makefile  Server.cpp  Server.h  matrix_mul.cpp
Assignment 03/MatMul/Results Obtained/: Contours.py  plotForSizes.py
Assignment 04/: SystemSpecAndAnalysis.txt
Project/Code/: CMakeLists.txt  MPILaplace.cpp  a.out  hosts
Project/Code/Obtained csv files/: global_u_size_128_procs_4.csv  global_u_size_256_procs_3.csv  global_u_size_512_procs_3.csv  global_u_size_64_procs_3.csv
